# qcc-ee

./: .gitignore  Dockerfile  Doxyfile  README.md  __init__.py  main.py  main_backend.py  qcc.py  qcl.qcc  qcl.qisa  qcl1.qcc  qcl_code.ll  qcl_code.s  qcl_opt.ll  qcl_output.s  test_circuits.qcc  test_frontend.py  test_kernels.qcc
QCC/: README.md  makefile
QCC/lib/: Block.cpp  Block.h  ConstantGlobal.h  ObjectFile.h  (+9 more)
llvm/: CMakeLists.txt
llvm/lib/Transforms/QCC/: CMakeLists.txt  CountCNOT.cpp  DecomposeSwap.cpp  EmitSwap.cpp  MultiGateAnalysis.cpp  QASMGen.cpp  QISAGen.cpp  QODGAnalysis.cpp
llvm/lib/Transforms/QCC/GateDecomposition/: CMakeLists.txt  Decompose2Native.cpp  EmitNativeMultiple.cpp  EmitNativeSingle.cpp
llvm/lib/Transforms/QCC/GateUnroll/: CMakeLists.txt  GateUnroll.cpp
llvm/lib/Transforms/QCC/Layout/: CMakeLists.txt  QCCLayout.cpp  QCCTrivialLayout.cpp
llvm/lib/Transforms/QCC/MD/: CMakeLists.txt  MachineDescription.cpp  QCCMachineDescription.cpp
llvm/lib/Transforms/QCC/QISA/: Block.cpp  CMakeLists.txt  Instruction.cpp  Instructions.cpp  ObjectFile.cpp  Program.cpp
llvm/lib/Transforms/QCC/QubitMapping/: CMakeLists.txt  QCCAncillaQubitMapping.cpp  QCCBFSQubitMapping.cpp  QCCSABREQubitMapping.cpp
llvm/lib/Transforms/QCC/Routing/: CMakeLists.txt  QCCBFSRouting.cpp  QCCSABRERouting.cpp
qcc_frontend/: __init__.py
sample_codes/: 01_single_gates.ll  01_single_gates.qasm  01_single_gates.qcc  01_single_gates.s  02_if_else.ll  02_if_else.qcc  02_if_else.s  03_for_loop.ll  03_for_loop.qcc  03_for_loop.s  04_inc_dec.ll  04_inc_dec.qcc  04_inc_dec.s
(+242 files in other folders)
